--- a/pom.xml
+++ b/pom.xml
@@ -54,9 +54,11 @@
     <dependency>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok</artifactId>
-        <optional>true</optional>
+        <version>1.18.32</version> <!-- lub nowsza -->
+        <scope>provided</scope>
     </dependency>
-    <dependency>
+
+        <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-test</artifactId>
         <scope>test</scope>
