--- a/MainService/src/main/resources/application.properties
+++ b/MainService/src/main/resources/application.properties
@@ -5,6 +5,7 @@ server.port=8082
 jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=3600000  
 
+# Database
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -13,4 +14,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-eureke.client.service-url.default-zone=http://localhost:8761/eureka/
+# Eureka Client - Poprawiona nazwa klucza
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+
+# Wymuszanie poprawnego interfejsu sieciowego
+spring.cloud.inetutils.ignored-interfaces[0]=vEthernet.*
+spring.cloud.inetutils.ignored-interfaces[1]=docker.*
+spring.cloud.inetutils.ignored-interfaces[2]=wsl.*
+
+# Eureka Instance - Wymuszamy IP Twojego WiFi
+eureka.instance.hostname=192.168.1.37
+eureka.instance.prefer-ip-address=true
+eureka.instance.ip-address=192.168.1.37
+eureka.instance.instance-id=192.168.1.37:MainService:8082
