--- a/MainService/src/main/resources/application.properties
+++ b/MainService/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=MainService
 server.port=8082
 
-# JWT
+# --- JWT ---
 jwt.secret=${JWT_SECRET}
 jwt.expiration-ms=3600000  
 
-# Database
+# --- Database ---
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USERNAME}
 spring.datasource.password=${DB_PASSWORD}
@@ -14,16 +14,13 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-# Eureka Client - Poprawiona nazwa klucza
+# --- Eureka Client ---
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 
-# Wymuszanie poprawnego interfejsu sieciowego
-spring.cloud.inetutils.ignored-interfaces[0]=vEthernet.*
-spring.cloud.inetutils.ignored-interfaces[1]=docker.*
-spring.cloud.inetutils.ignored-interfaces[2]=wsl.*
-
-# Eureka Instance - Wymuszamy IP Twojego WiFi
-eureka.instance.hostname=192.168.1.37
+# --- Konfiguracja dla kabla USB (ADB Reverse) ---
 eureka.instance.prefer-ip-address=true
-eureka.instance.ip-address=192.168.1.37
-eureka.instance.instance-id=192.168.1.37:MainService:8082
+eureka.instance.ip-address=127.0.0.1
+eureka.instance.instance-id=${spring.application.name}:127.0.0.1:8082
+
+# Ignorowanie sieci zewn?trznych
+spring.cloud.inetutils.preferred-networks[0]=127.0.0.1
